#functionStudy
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${FUNCTIONSTUDY_EXECUTABLE_OUTPUT_PATH})
add_subdirectory(Fsm)
add_subdirectory(functionAndbind)
add_subdirectory(parseCmdLine)
#add_subdirectory(protobufUse)
add_subdirectory(iovecUse)
add_subdirectory(structUse)
add_subdirectory(systemFunUse)
add_subdirectory(typedefUse)
add_subdirectory(va_listFun)
add_subdirectory(share_ptrUse)
add_subdirectory(scopeFun)

if(PROTOBUF_FOUND)
  add_subdirectory(protobufUse)
else()
  add_subdirectory(protobufUse EXCLUDE_FROM_ALL)
endif()